force-app/main/default/objects/IF_SEMA_SFDC_Dummy__c/IF_SEMA_SFDC_Dummy__c.object-meta.xml
<CustomObject>
    <description>IF_SEMA_SFDC_Dummy 
SEMA &gt; SFDC 방향 Interface 적재용 Dummy Object</description>
    <label>IF_SEMA_SFDC_Dummy</label>
    <nameField>
        <displayFormat>DU{YY}{MM}{DD}{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IF_SEMA_SFDC_Dummy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>