force-app/main/default/objects/IF_SEMA_SFDC_Dummy__c/fields/code_message__c.field-meta.xml
<CustomField>
    <fullName>code_message__c</fullName>
    <description>[IF_SEMA_SFDC_0001] code_message</description>
    <label>code_message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>