force-app/main/default/objects/IF_SEMA_SFDC_Dummy__c/fields/IF_Id__c.field-meta.xml
<CustomField>
    <fullName>IF_Id__c</fullName>
    <description>Interface Id</description>
    <label>IF_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>