force-app/main/default/objects/IF_SEMA_SFDC_Dummy__c/fields/mt_report_code_ib__c.field-meta.xml
<CustomField>
    <fullName>mt_report_code_ib__c</fullName>
    <description>[IF_SEMA_SFDC_0001] mt_report_code_ib</description>
    <label>mt_report_code_ib</label>
    <length>10</length>
    <type>Text</type>
</CustomField>