force-app/main/default/objects/IF_SEMA_SFDC_Dummy__c/fields/noti_id__c.field-meta.xml
<CustomField>
    <fullName>noti_id__c</fullName>
    <description>[IF_SEMA_SFDC_0001] noti_id</description>
    <label>noti_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>