force-app/main/default/objects/IF_SEMA_SFDC_Dummy__c/fields/recipient_num__c.field-meta.xml
<CustomField>
    <fullName>recipient_num__c</fullName>
    <description>recipient_num 수신자 번호</description>
    <label>recipient_num</label>
    <type>Phone</type>
</CustomField>