force-app/main/default/objects/IF_SEMA_SFDC_Dummy__c/fields/SucessYN__c.field-meta.xml
<CustomField>
    <fullName>SucessYN__c</fullName>
    <description>[IF_SEMA_SFDC_0001] 성공(Y), 에러(N)</description>
    <label>SucessYN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>